# gd32f470-project

./: .gitignore  CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
1-led-demo/project/: led-demo.ewp  led-demo.ewt  led-demo.eww
1-led-demo/source/: main.c
1-led-printf-demo/include/: main.h
1-led-printf-demo/project/: led-printf-demo.ewp  led-printf-demo.ewt  led-printf-demo.eww
1-led-printf-demo/source/: main.c  systick.c
3rdPary/RTT/: CMakeLists.txt  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_printf.c
3rdPary/cherryUSB/: CMakeLists.txt
3rdPary/cherryUSB/class/: 拖放的文本.txt
3rdPary/lwrb/: CMakeLists.txt  lwrb.c  lwrb_ex.c
Firmware/: CMakeLists.txt  link.ld  startup_gd32f4xx.s
Firmware/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
Hardware/: CMakeLists.txt
Hardware/LED/: Led.c  led.h
Hardware/RGB/: lcd.c  lcd.h  lcd_ui.h  pic.h
Hardware/SDRAM/: exmc_sdram.c
Hardware/USB/: usb_hw.c
common/3rdPary/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_printf.c
common/drive/LED/: Led.c  led.h
common/drive/USART/: bsp_usart.c  bsp_usart.h
pyocd/: pyocd.yaml
scripts/pyocd-test/: pyocd-test.ipynb  pyocd.yaml
scripts/rtt-test/: test.ipynb
user/: CMakeLists.txt  gd32f4xx_it.c  main.c  main.h
user/inc/: main.h  mempool.h  usb_conf.h
user/src/: gd32f4xx_it.c  main.c  mempool.c  systick.c
